# Binaly

./: Binaly.kdev4  CMakeLists.txt  Filalyzer.cpp  Filalyzer.h  Filalyzer.kdev4  README.txt  main.cpp
doc/: CMakeLists.txt  Doxyfile.in
lang/: Binaly_de.ts  Filalyzer_de.ts
src/: About.cpp  About.hpp  Binaly.cpp  Binaly.hpp  BinaryBar.cpp  Filalyzer.cpp  Filalyzer.hpp  HexFile.cpp  HexFile.hpp  Hexedit.cpp  Hexedit.hpp  Histogram.cpp  SettingsDialog.cpp  SettingsDialog.hpp  Threading.cpp  Threading.hpp  custom_comp.cpp  custom_comp.hpp  main.cpp
